--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "yajra/laravel-datatables": "^11.0",
+        "yajra/laravel-datatables-oracle": "^11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
